Name:                prolog
Version:             0.1
Synopsis:            A Prolog interpreter written in Haskell.
License:             PublicDomain
Author:              Matthias Bartsch
Maintainer:          bartsch@cs.uni-bonn.de
Category:            Language
Build-type:          Simple

Cabal-version:       >=1.2

Library
  Exposed-modules: Language.Prolog
  Other-modules:   Prolog
  Hs-Source-Dirs:  src

  Build-depends:
    base >=4 && <5,
    parsec >= 3.1.1,
    syb >= 0.3,
    mtl >= 2.0.1.0,
    readline,
    containers >=0.4 && <0.5

